[gd_scene load_steps=4 format=2]

[ext_resource path="res://Zombo.gd" type="Script" id=1]
[ext_resource path="res://assets/PNG/Zombie 1/zoimbie1_hold.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 11.1443
height = 23.9691

[node name="Zombo" type="KinematicBody2D"]

input_pickable = false
collision_layer = 4
collision_mask = 3
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "collision" ]
__meta__ = {
"_edit_group_": true
}
hits = 1
speed = 100

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

position = Vector2( -4.08784, -0.291988 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="BiteTimer" type="Timer" parent="." index="3"]

process_mode = 0
wait_time = 1.5
one_shot = false
autostart = false

[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]

[connection signal="timeout" from="BiteTimer" to="." method="_on_BiteTimer_timeout"]


